--- a/style.css
+++ b/style.css
@@ -118,21 +118,12 @@ font-family: 'Open Sans Condensed', sans-serif;
 
 
 
-/* Half Page Carousel itself*/
-.carousel {
-  height: 40%; 
-	object-position: 0}
-  .carousel .carousel-inner {
-    height: 100%; }
-    .carousel .carousel-inner .carousel-item,
-    .carousel .carousel-inner .active {
-      height: 100%; }
+@media (max-width: 768px) {
+  #nav-menu-container {
+    display: none;
+  }
+}
 
-/* Adjustment for mobile devices*/
-@media (max-width: 776px) {
-  .carousel {
-    height: 50%; 
-   } }
 
 .conty{
 	font-family: 'Pacifico', cursive;
