--- a/css/style.css
+++ b/css/style.css
@@ -1,302 +1,3 @@
-
-   
-body{
-
-	 background-image: url("bg/6.png");
-    background-repeat: repeat;
-    font-family: 'Barlow', sans-serif;
-}
-
-
-#whites{
-	background-color: white;
-
-}
-
-
-.sacra{
-	font-family: 'Sacramento', cursive;
-	font-style: 8rem;
-}
-
-
-
-#hero {
-  width: 100%;
-  height: 100vh;
-  background: url(src/land2.JPG) top center;
-  background-size: cover;
-  position: relative;
-}
-
-@media (min-width: 1024px) {
-  #hero {
-    background-attachment: fixed;
-  }
-}
-
-#hero:before {
-  content: "";
-  background: rgba(0, 0, 0, 0.4);
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-}
-
-#hero .hero-container {
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-}
-
-#hero h1 {
-  margin: 30px 0 10px 0;
-  font-size: 4em;
-  font-weight: 700;
-  line-height: 56px;
-  
-  color: #fff;
-}
-
-/*@media (max-width: 768px) {
-  #hero h1 {
-    font-size: 3em;
-    line-height: 36px;
-  }
-}*/
-
-#hero h2 {
-  color: #eee;
-  margin-bottom: 50px;
-  font-size: 30px;
-font-family: 'Open Sans Condensed', sans-serif;
-}
-
-/*@media (max-width: 768px) {
-  #hero h2 {
-    font-size: 18px;
-    line-height: 24px;
-    margin-bottom: 30px;
-  }}
-
-*/
-#hero .btn-get-started {
-  font-family: "Poppins", sans-serif;
-  text-transform: uppercase;
-  font-weight: 500;
-  font-size: 16px;
-  letter-spacing: 1px;
-  display: inline-block;
-  padding: 8px 28px;
-  border-radius: 50px;
-  transition: 0.5s;
-  margin: 10px;
-  border: 2px solid #fff;
-  color: #fff;
-}
-
-#hero .btn-get-started:hover {
-  background: #2dc997;
-  border: 2px solid #2dc997;
-}
-
-
-
-
-
-
-
-
-
-
-
-.conty{
-	font-family: 'Pacifico', cursive;
-}
-
- #map {
-        height: 100%;
-      }
-
- .modal-content{
- 	width: 700px;
- 	    height: 550px;
- }
-
-
-.heart{
-	color: red;
-}
-
-.listy {
-
-	list-style:none
-}
-
-.guys {
-
-	justify-content: center;
-}
-
-
-h1 {
-	text-align: center;
-}
-
-
-
-.display-4 {
-	text-align: center;
-}
-
-
-
-/*.container-fluid{
-	padding-left: 0;
-	padding-right: 0;
-}*/
-
-
-
-.display-4-footy{
-	font-family: 'Sacramento', cursive;
-	font-size: 3rem;
-
-}
-
-
-
-
-.tably td{
-	justify-content: center;
-	text-align:center;
-}
-
-
-table
-
-{
-	justify-content: center;
-	text-align:center;
-}
-
-table th
-
-{
-	justify-content: center;
-	text-align:center;
-}
-
-.col1
-{
-	
-	justify-content: center;
-	text-align:center;
-	
-
-}
-
-.col2
-{
-
-	justify-content: center;
-	text-align:center;
-}
-
-.col3
-{
-
-	justify-content: center;
-	text-align:center;
-}
-
-
-
-#big{
-	text-align: left;
-	
-}
-
-#hist{
-	text-align: justify;
-}
-
-
-footer.page-footer .footer-copyright {
-    overflow: hidden;
-    background-color: #747e96;
-    color: white;
-}
-
-
-footer.page-footer  {
-    overflow: hidden;
-    background-color: #44506f;
-    color: white;
-}
-
-
-#toHeaven {
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
-  font-size: 18px;
-  border: none;
-  outline: none;
-  background-color: red;
-  color: white;
-  cursor: pointer;
-  padding: 15px;
-  border-radius: 4px;
-}
-
-#toHeaven:hover {
-  background-color: #555;
-}
-
-
-/* unvisited link */
-a:link {
-    color: black;
-}
-
-/* visited link */
-a:visited {
-    color: black;
-}
-
-/* mouse over link */
-a:hover {
-    color: grey;
-}
-
-/* selected link */
-a:active {
-    color: blue;
-}
-
-
-
-.fonty1{
-	font-size: 30px;
-	font-family: 'Dosis', sans-serif;
-
-}
-
-
-
-
 /*
   Theme Name: Regna
   Theme URL: https://bootstrapmade.com/regna-bootstrap-onepage-template/
@@ -437,7 +138,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url(src/land2.JPG) top center;
+  background: url(../img/hero-bg.jpg) top center;
   background-size: cover;
   position: relative;
 }
