--- a/style.css
+++ b/style.css
@@ -29,12 +29,12 @@ body{
   position: relative;
 }
 
-/*@media (min-width: 1024px) {
+@media (min-width: 1024px) {
   #hero {
     background-attachment: fixed;
   }
 }
-*/
+
 #hero:before {
   content: "";
   background: rgba(0, 0, 0, 0.4);
@@ -67,12 +67,12 @@ body{
   color: #fff;
 }
 
-/*@media (max-width: 768px) {
+@media (max-width: 768px) {
   #hero h1 {
     font-size: 3em;
     line-height: 36px;
   }
-}*/
+}
 
 #hero h2 {
   color: #eee;
@@ -81,13 +81,13 @@ body{
 font-family: 'Open Sans Condensed', sans-serif;
 }
 
-/*@media (max-width: 768px) {
+media (max-width: 768px) {
   #hero h2 {
     font-size: 18px;
     line-height: 24px;
     margin-bottom: 30px;
   }
-}*/
+}
 
 #hero .btn-get-started {
   font-family: "Poppins", sans-serif;
@@ -123,10 +123,10 @@ font-family: 'Open Sans Condensed', sans-serif;
       height: 100%; }
 
 /* Adjustment for mobile devices*/
-/*@media (max-width: 776px) {
+@media (max-width: 776px) {
   .carousel {
     height: 50%; 
-   } }*/
+   } }
 
 .conty{
 	font-family: 'Pacifico', cursive;
