--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body{
 
 #hero h1 {
   margin: 30px 0 10px 0;
-  font-size: 4em;
+  font-size: 3rem;
   font-weight: 700;
   line-height: 56px;
   
@@ -69,7 +69,7 @@ body{
 
 @media (max-width: 768px) {
   #hero h1 {
-    font-size: 3em;
+    font-size: 3rem;
     line-height: 36px;
   }
 }
