--- a/style.css
+++ b/style.css
@@ -67,12 +67,12 @@ body{
   color: #fff;
 }
 
-@media (max-width: 768px) {
+/*@media (max-width: 768px) {
   #hero h1 {
     font-size: 3rem;
     line-height: 36px;
   }
-}
+}*/
 
 #hero h2 {
   color: #eee;
@@ -81,13 +81,13 @@ body{
 font-family: 'Open Sans Condensed', sans-serif;
 }
 
-media (max-width: 768px) {
+/*media (max-width: 768px) {
   #hero h2 {
     font-size: 18px;
     line-height: 24px;
     margin-bottom: 30px;
   }
-}
+}*/
 
 #hero .btn-get-started {
   font-family: "Poppins", sans-serif;
@@ -111,22 +111,6 @@ media (max-width: 768px) {
 
 
 
-
-/* Half Page Carousel itself*/
-.carousel {
-  height: 40%; 
-	object-position: 0}
-  .carousel .carousel-inner {
-    height: 100%; }
-    .carousel .carousel-inner .carousel-item,
-    .carousel .carousel-inner .active {
-      height: 100%; }
-
-/* Adjustment for mobile devices*/
-@media (max-width: 776px) {
-  .carousel {
-    height: 50%; 
-   } }
 
 .conty{
 	font-family: 'Pacifico', cursive;
