--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body{
 
 
 
+
 #hero {
   width: 100%;
   height: 100vh;
@@ -60,19 +61,19 @@ body{
 
 #hero h1 {
   margin: 30px 0 10px 0;
-  font-size: 3rem;
+  font-size: 4em;
   font-weight: 700;
   line-height: 56px;
   
   color: #fff;
 }
 
-/*@media (max-width: 768px) {
+@media (max-width: 768px) {
   #hero h1 {
-    font-size: 3rem;
+    font-size: 3em;
     line-height: 36px;
   }
-}*/
+}
 
 #hero h2 {
   color: #eee;
@@ -81,13 +82,13 @@ body{
 font-family: 'Open Sans Condensed', sans-serif;
 }
 
-/*media (max-width: 768px) {
+@media (max-width: 768px) {
   #hero h2 {
     font-size: 18px;
     line-height: 24px;
     margin-bottom: 30px;
   }
-}*/
+}
 
 #hero .btn-get-started {
   font-family: "Poppins", sans-serif;
@@ -111,6 +112,23 @@ font-family: 'Open Sans Condensed', sans-serif;
 
 
 
+
+
+/* Half Page Carousel itself*/
+.carousel {
+  height: 40%; 
+	object-position: 0}
+  .carousel .carousel-inner {
+    height: 100%; }
+    .carousel .carousel-inner .carousel-item,
+    .carousel .carousel-inner .active {
+      height: 100%; }
+
+/* Adjustment for mobile devices*/
+/*@media (max-width: 776px) {
+  .carousel {
+    height: 50%; 
+   } }*/
 
 .conty{
 	font-family: 'Pacifico', cursive;
