--- a/style.css
+++ b/style.css
@@ -20,11 +20,9 @@ body{
 }
 
 
-.navbar-expand-md .navbar-nav {
-    -ms-flex-direction: row;
-    flex-direction: row-reverse;
+#aide{
+  height: auto;
 }
-
 
 
 
